Import of TSTANLEY/Games-QuizTaker-1.09 from CPAN.
gitpan-cpan-distribution: Games-QuizTaker
gitpan-cpan-version:      1.09
gitpan-cpan-path:         TSTANLEY/Games-QuizTaker-1.09.tar.gz
gitpan-cpan-author:       TSTANLEY
gitpan-cpan-maturity:     released

--- a/QuizTaker.html
+++ b/QuizTaker.html
@@ -106,9 +106,8 @@ which prints out your final score.</P>
 <P>There is a single function available for debugging. When called, it will
 print out the contents of the object and its parameters.
 </P>
-<PRE>
-
-=head1 ACKNOWLEDGEMENTS</PRE>
+<HR>
+<H1><A NAME="acknowledge">ACKNOWLEDGEMENTS</A></H1>
 <P>Special thanks to everyone at <A HREF="http://perlmonks.org">http://perlmonks.org</A> for their suggestions
 and contributions to this module, and to Damian Conway for his excellent
 book on Object Oriented Perl</P>
